tests/toylang/neg/001015_mutation.toylang
program a = { if a then sleep else do; } .
